Fixes layout issues

--- a/tabpanel-ui/src/index.css
+++ b/tabpanel-ui/src/index.css
@@ -28,6 +28,10 @@ body {
   min-height: 100vh;
 }
 
+body * {
+  box-sizing: border-box;
+}
+
 #root {
   height: 100dvh;
 }
